--- a/RealToors/style.css
+++ b/RealToors/style.css
@@ -1,82 +1,88 @@
 .navigation {
-  list-style: none;
-  margin: 0;
-  background: coral;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
+    list-style: none;
+    margin: 0;
+    background: coral;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
   
 }
 
 .navigation a {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  text-decoration: none;
-  display: inline-flex;
-  display: block;
-  background-color: coral;
-  width: 25em;
-  padding: 1em;
-  color: snow;
-  border:solid;
-  border-color: snow;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    text-decoration: none;
+    display: inline-flex;
+    display: block;
+    background-color: coral;
+    width: 25em;
+    padding: 1em;
+    color: snow;
+    border:solid;
+    border-color: snow;
 }
 
 .pages {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 35em;
 }
 
-.pages {
-  text-align: center;
+.page {
+    text-align: center;
 }
 
 .navigation a:hover {
-  color: black;
-  background: #ffab81;
-  border: solid;
-  border-color:black;
+    color: black;
+    background: #ffab81;
+    border: solid;
+    border-color:black;
 }
 
 .wrapper {
-  display: flex;
-  flex-flow: row wrap;
-  font-weight: bold;
-  text-align: center;
+    display: flex;
+    flex-flow: row wrap;
+    font-weight: bold;
+    text-align: center;
 }
 
 .wrapper > * {
-  padding: 10px;
-  flex: 100%;
+    padding: 10px;
+    flex: 100%;
 }
 
 .header {
-  background: #e6e6fa;
-  background-image: url("./pics/CartoonCity2.jpg");
-  background-position: center 300px;
+    background: #e6e6fa;
+    background-image: url("./pics/CartoonCity2.jpg");
+    background-position: center 300px;
 }
 
 .footer {
-  background: coral;
-  color: white;
-  text-align: right;
+    background: coral;
+    color: white;
+    text-align: right;
 }
 
 .main {
-  text-align: left;
-  background: #00cdcd;
-  color: white;
+    text-align: left;
+    background: #00cdcd;
+    color: white;
 }
 
 .aside {
-  background: #e6e6fa;
-  height: 35em;
+    background: #e6e6fa;
+    height: 35em;
+}
+
+.aside-1 {
+    
 }
 
 @media all and (min-width: 600px) {
@@ -90,28 +96,14 @@
 @media all and (min-width: 800px) {
 
     .main {
-    flex: 100em;
-    height: 35em;
+        flex: 100em;
+        height: 35em;
   }
-  .navigation {
-    order: 1;
-  }
-  
-  .aside-1 {
-    order: 2;
-  }
-
-  .main {
-    order: 3;
-  }
-
-  .aside-2 {
-    order: 4;
-  }
-
-  .footer {
-    order: 5;
-  }
+    .navigation {order: 1;}
+    .aside-1 {order: 2;}
+    .main {order: 3;}
+    .aside-2 {order: 4;}
+    .footer {order: 5;}
 }
 
 body {
