--- a/RealToors/style.css
+++ b/RealToors/style.css
@@ -44,6 +44,7 @@
     background: #ffab81;
     border: solid;
     border-color:black;
+    font-style: italic;
 }
 
 .wrapper {
@@ -81,8 +82,13 @@
     height: 35em;
 }
 
-.aside-1 {
-    
+#button {
+    position: absolute;
+    top: 1em;
+    right: 3em;
+    font-size: .75em;
+    margin-left: 20px;
+    background-color: snow;
 }
 
 @media all and (min-width: 600px) {
@@ -108,4 +114,45 @@
 
 body {
     background-color: #e6e6fa;
+}
+
+/* The initial sideBar */
+.SideBar {
+    height: 0; 
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 10px;
+    right: 20px;
+    background-color: #e6e6fa;
+    overflow: hidden;
+    padding-top: 0px;
+    transition: 0.5s;
+
+}
+
+
+/* The Side bar links */
+.SideBar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    display: block;
+    transition: 0.3s;
+
+}
+
+/* Put the close button in the top right corner.*/
+.SideBar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 30px;
+    margin-left: 50px;
+}
+
+#login {
+    background-color: snow;
+    color:black;
 }
