--- a/RealToors/style.css
+++ b/RealToors/style.css
@@ -156,3 +156,39 @@ body {
     background-color: snow;
     color:black;
 }
+
+//Below is added css for the events page started by Jeremy on 3/7/2017. Everything above this is the original css
+a.darken {
+    display: inline-block;
+    background: black;
+    padding: 0;
+    overflow:hidden;
+    position:relative;
+    text-align:center;
+    width: 720px;
+}
+
+a.darken img {
+    display: block;
+    
+    -webkit-transition: all 0.5s linear;
+       -moz-transition: all 0.5s linear;
+        -ms-transition: all 0.5s linear;
+         -o-transition: all 0.5s linear;
+            transition: all 0.5s linear;
+}
+
+a.darken:hover img {
+    opacity: 0.7;
+            
+}
+a.darken:hover span{
+    display:block;
+    position:absolute;
+    z-index:9999;
+    left: 360px;
+    color: black;
+    font-size:24px; 
+}
+
+//span{display:none;}
