--- a/RealToors/style.css
+++ b/RealToors/style.css
@@ -37,6 +37,7 @@
 
 .page {
     text-align: center;
+   
 }
 
 .navigation a:hover {
@@ -69,22 +70,35 @@
     background: coral;
     color: white;
     text-align: right;
+    height: 2em;
 }
 
 .main {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: left;
     background: #00cdcd;
     color: white;
+    align-items: center;
 }
+
+.Events {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    
+}
+
+
 
 .aside {
     background: #e6e6fa;
-    height: 35em;
+    height: auto;
 }
 
 #button {
     position: absolute;
-    top: 1em;
     right: 3em;
     font-size: .75em;
     margin-left: 20px;
@@ -103,7 +117,7 @@
 
     .main {
         flex: 100em;
-        height: 35em;
+        height: auto;
   }
     .navigation {order: 1;}
     .aside-1 {order: 2;}
@@ -122,9 +136,10 @@ body {
     width: 200px;
     position: fixed;
     z-index: 1;
-    top: 10px;
+    bottom: 10px;
     right: 20px;
     background-color: #e6e6fa;
+    color: black;
     overflow: hidden;
     padding-top: 0px;
     transition: 0.5s;
@@ -156,20 +171,21 @@ body {
     background-color: snow;
     color:black;
 }
-
-//Below is added css for the events page started by Jeremy on 3/7/2017. Everything above this is the original css
+/* Below is added css for the events page started by Jeremy on 3/7/2017. Everything above this is the original css
 a.darken {
+    flex:auto;
     display: inline-block;
     background: black;
     padding: 0;
     overflow:hidden;
     position:relative;
     text-align:center;
-    width: 720px;
+    width: auto;
 }
 
 a.darken img {
     display: block;
+
     
     -webkit-transition: all 0.5s linear;
        -moz-transition: all 0.5s linear;
@@ -183,12 +199,11 @@ a.darken:hover img {
             
 }
 a.darken:hover span{
-    display:block;
-    position:absolute;
-    z-index:9999;
+    display:inline-block;
+    z-index:999;
     left: 360px;
-    color: black;
+    color: greenyellow;
     font-size:24px; 
 }
 
-//span{display:none;}
+span{display:none;} */
